# cmake-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
src/: main.cpp
